security: 清理2dev配置文件中的敏感数据，替换为示例模板
移除的敏感数据:
- backup_codes.txt: 移除真实备份码
- new_2fa_secrets.txt: 移除真实2FA密钥
- recovery_emails.txt: 移除真实邮箱列表
- email_config.ini: 移除IMAP邮箱密码

--- a/2dev/email_config.ini
+++ b/2dev/email_config.ini
@@ -7,10 +7,10 @@
 # - 如何获取授权码: 登录163邮箱 -> 设置 -> POP3/SMTP/IMAP -> 开启IMAP服务 -> 获取授权码
 
 [imap_163]
-email = chujian123qwe@163.com
-password = NGtB4HF8KPtD9MKC
+email = your_email@163.com
+password = your_authorization_code
 
 # 域名邮箱配置
-# 所有发送到 *@xiaochujian.asia 的邮件都会转发到上面的163邮箱
+# 所有发送到 *@yourdomain.com 的邮件都会转发到上面的163邮箱
 [domain_email]
-domain = xiaochujian.asia
+domain = yourdomain.com
