--- a/Auto_All_System_Web/docker-compose.yml
+++ b/Auto_All_System_Web/docker-compose.yml
@@ -60,6 +60,9 @@ services:
       - ALLOWED_HOSTS=localhost,127.0.0.1,backend
       # 比特浏览器API（使用host.docker.internal访问宿主机）
       - BITBROWSER_API_URL=http://host.docker.internal:54345
+      # GeekezBrowser API（使用host.docker.internal访问宿主机）
+      - GEEKEZ_API_HOST=host.docker.internal
+      - GEEKEZ_API_PORT=19527
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
@@ -99,6 +102,9 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       # 比特浏览器API
       - BITBROWSER_API_URL=http://host.docker.internal:54345
+      # GeekezBrowser API
+      - GEEKEZ_API_HOST=host.docker.internal
+      - GEEKEZ_API_PORT=19527
     depends_on:
       - db
       - redis
@@ -111,6 +117,8 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     command: celery -A config beat -l info
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       - ./backend:/app
     env_file:
@@ -128,6 +136,9 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       # 比特浏览器API
       - BITBROWSER_API_URL=http://host.docker.internal:54345
+      # GeekezBrowser API
+      - GEEKEZ_API_HOST=host.docker.internal
+      - GEEKEZ_API_PORT=19527
     depends_on:
       - db
       - redis
