--- a/Auto_All_System_Web/docker-compose.dev.yml
+++ b/Auto_All_System_Web/docker-compose.dev.yml
@@ -43,6 +43,7 @@ services:
       - ./backend:/app
       - static_volume:/app/staticfiles
       - media_volume:/app/media
+      - C:/Users/pig/AppData/Roaming/geekez-browser/BrowserProfiles:/geekez-browser/BrowserProfiles
     ports:
       - "8000:8000"
     env_file:
@@ -55,9 +56,14 @@ services:
       - DB_PASSWORD=your_password_here
       - REDIS_URL=redis://redis:6379/1
       - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
       - ENABLE_HTTPS=false
       - ALLOWED_HOSTS=localhost,127.0.0.1,backend
       - BITBROWSER_API_URL=http://host.docker.internal:54345
+      # GeekezBrowser API（使用 host.docker.internal 访问宿主机）
+      - GEEKEZ_API_HOST=host.docker.internal
+      - GEEKEZ_API_PORT=19527
+      - GEEKEZ_DATA_DIR=/geekez-browser/BrowserProfiles
     extra_hosts:
       - "host.docker.internal:host-gateway"
     depends_on:
@@ -77,6 +83,7 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
       - ./backend:/app
+      - C:/Users/pig/AppData/Roaming/geekez-browser/BrowserProfiles:/geekez-browser/BrowserProfiles
     env_file:
       - ./backend/.env
     environment:
@@ -87,7 +94,11 @@ services:
       - DB_PASSWORD=your_password_here
       - REDIS_URL=redis://redis:6379/1
       - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
       - BITBROWSER_API_URL=http://host.docker.internal:54345
+      - GEEKEZ_API_HOST=host.docker.internal
+      - GEEKEZ_API_PORT=19527
+      - GEEKEZ_DATA_DIR=/geekez-browser/BrowserProfiles
     depends_on:
       - db
       - redis
@@ -102,6 +113,7 @@ services:
     command: celery -A config beat -l info
     volumes:
       - ./backend:/app
+      - C:/Users/pig/AppData/Roaming/geekez-browser/BrowserProfiles:/geekez-browser/BrowserProfiles
     env_file:
       - ./backend/.env
     environment:
@@ -112,7 +124,11 @@ services:
       - DB_PASSWORD=your_password_here
       - REDIS_URL=redis://redis:6379/1
       - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
       - BITBROWSER_API_URL=http://host.docker.internal:54345
+      - GEEKEZ_API_HOST=host.docker.internal
+      - GEEKEZ_API_PORT=19527
+      - GEEKEZ_DATA_DIR=/geekez-browser/BrowserProfiles
     depends_on:
       - db
       - redis
