--- a/Auto_All_System_Web/backend/Dockerfile
+++ b/Auto_All_System_Web/backend/Dockerfile
@@ -6,11 +6,26 @@ WORKDIR /app
 # 设置环境变量
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
-    PIP_NO_CACHE_DIR=1 \
     DJANGO_ENVIRONMENT=production
 
+# Allow using faster pip mirror during docker build
+ARG PIP_INDEX_URL
+ARG PIP_TRUSTED_HOST
+
+# Optional: pip proxy (ONLY for pip, not for apt)
+ARG PIP_PROXY
+
+# Allow using HTTP proxy during docker build (for slow networks)
+ARG HTTP_PROXY
+ARG HTTPS_PROXY
+ARG NO_PROXY
+ARG http_proxy
+ARG https_proxy
+ARG no_proxy
+
 # 安装系统依赖
-RUN apt-get update && apt-get install -y \
+RUN HTTP_PROXY= HTTPS_PROXY= NO_PROXY= http_proxy= https_proxy= no_proxy= \
+    apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
     curl \
@@ -21,8 +36,15 @@ RUN apt-get update && apt-get install -y \
 COPY requirements/ requirements/
 
 # 安装 Python 依赖
-RUN pip install --upgrade pip && \
-    pip install -r requirements/base.txt
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --upgrade pip \
+      ${PIP_PROXY:+--proxy "$PIP_PROXY"} \
+      ${PIP_INDEX_URL:+-i "$PIP_INDEX_URL"} \
+      ${PIP_TRUSTED_HOST:+--trusted-host "$PIP_TRUSTED_HOST"} && \
+    pip install -r requirements/base.txt \
+      ${PIP_PROXY:+--proxy "$PIP_PROXY"} \
+      ${PIP_INDEX_URL:+-i "$PIP_INDEX_URL"} \
+      ${PIP_TRUSTED_HOST:+--trusted-host "$PIP_TRUSTED_HOST"}
 
 # 复制项目文件
 COPY . .
@@ -42,4 +64,3 @@ ENTRYPOINT ["docker-entrypoint.sh"]
 
 # 启动命令（默认，可被 docker-compose 覆盖）
 CMD ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "4"]
-
