--- a/Auto_All_System_Web/frontend/package.json
+++ b/Auto_All_System_Web/frontend/package.json
@@ -22,7 +22,10 @@
     "@types/node": "^25.0.9",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
     "sass": "^1.72.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.4.0",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
