chore(git): ignore local geekez profile caches

--- a/Auto_All_System_Web/.gitignore
+++ b/Auto_All_System_Web/.gitignore
@@ -81,4 +81,6 @@ coverage.xml
 
 # Docker
 *.log
-
+# Local Geekez profile caches (may contain personal emails/ids)
+backend/geekez-browser/BrowserProfiles/profiles.json
+data/geekez-profiles/profiles.json
