--- a/Auto_All_System_Web/frontend/package.json
+++ b/Auto_All_System_Web/frontend/package.json
@@ -10,13 +10,21 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
+    "@tanstack/vue-table": "^8.21.3",
+    "@vee-validate/zod": "^4.15.1",
+    "@vueuse/core": "^14.1.0",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.10",
-    "element-plus": "^2.6.3",
+    "lucide-vue-next": "^0.563.0",
     "pinia": "^2.1.7",
+    "reka-ui": "^2.8.0",
+    "tailwind-merge": "^3.4.0",
+    "vee-validate": "^4.15.1",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^25.0.9",
@@ -25,7 +33,9 @@
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
     "sass": "^1.72.0",
+    "shadcn-vue": "^2.4.3",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "~5.4.0",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
