chore: 更新忽略规则并同步前端锁文件

--- a/.gitignore
+++ b/.gitignore
@@ -388,6 +388,11 @@ debug_*.gif
 # Playwright 浏览器文件
 **/ms-playwright/
 
+# 本地代理/调试工具目录（不提交）
+.claude/
+.serena/
+Auto_All_System_Web/data/
+
 # ============================================
 # 说明
 # ============================================
